force-app/main/default/objects/SR_Case_Contact__c/SR_Case_Contact__c.object-meta.xml
<CustomObject>
    <description>This the case contact object</description>
    <label>SR Case Contact</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Case Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>