force-app/main/default/objects/SR_Case_Contact__c/fields/Case_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Email__c</fullName>
    <label>Case Contact Email</label>
    <type>Email</type>
</CustomField>