force-app/main/default/objects/SR_Case_Contact__c/fields/Case_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Fax__c</fullName>
    <label>Case Contact Fax</label>
    <length>80</length>
    <type>Text</type>
</CustomField>