force-app/main/default/objects/SR_Case_Contact__c/fields/Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Name__c</fullName>
    <label>Case Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>