force-app/main/default/objects/SR_Case_Contact__c/fields/Case_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Phone__c</fullName>
    <label>Case Contact Phone</label>
    <type>Phone</type>
</CustomField>