force-app/main/default/objects/SR_Case_Contact__c/fields/Sub_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Case ID</label>
    <referenceTo>SR_Sub_Case__c</referenceTo>
    <relationshipLabel>Case Contacts</relationshipLabel>
    <relationshipName>Case_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>